<resources>
    <string name="app_name">CountDown</string>
    <string name="target_number">%d ± 0</string>
    <string name="new_palette">New</string>
    <string name="undo">Undo</string>
    <string name="solve">Solve</string>
    <string name="one">%d</string>
    <string name="two">%d</string>
    <string name="three">%d</string>
    <string name="four">%d</string>
    <string name="five">%d</string>
    <string name="six">%d</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="steps">STEPS</string>
    <string name="win">You won 👌</string>
    <string name="solution_text">Solution\n%s</string>
    <string name="no_solution_text">There is no solution 😒</string>
</resources>